--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,18 @@
 </head>
 
 <body class="bg-white dark:bg-dark">
-  <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
+  <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
     <nav>
       <div
-        class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 flex justify-between items-center tracking-widest">
+        class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
         <div class="logo">
-          <p class="text-tiny lg:text-tiny">
+          <p class="text-tiny lg:text-tiny xl:text-xs">
             <a href="index.html">OZENUA OLUWATOBI</a>
           </p>
         </div>
 
-        <div class="navlist hidden lg:block lg:w-60">
-          <ul class="flex justify-between border items-center text-center lg:text-tiny">
+        <div class="navlist hidden lg:block lg:w-60 xl:w-72">
+          <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs">
             <li><a href="#">CONTACT ME</a></li>
             <li><a href="#">CASES</a></li>
             <li><a href="#">RESUME</a></li>
@@ -49,7 +49,7 @@
       </div>
     </nav>
 
-    <section class="hero py-14 md:py-16" id="hero">
+    <section class="hero py-14 md:py-16 xl:py-20" id="hero">
       <div class="hero-container">
         <!-- Hero header for small screens -->
         <p class="hero-header-text md:hidden font-caudex dark:text-white text-5xl sm:text-6xl text-left tracking-tight">
@@ -57,8 +57,7 @@
         </p>
 
         <!-- Hero header for big screens -->
-        <p
-          class="hero-header-text hidden md:block font-caudex dark:text-white lg:font-normal md:text-6xl lg:text-7xl text-left tracking-tight">
+        <p class="hero-header-text hidden md:block font-caudex dark:text-white lg:font-normal md:text-6xl lg:text-7xl xl:text-8xl text-left tracking-tight">
           Hey, I'm Ozenua.
         </p>
 
@@ -270,8 +269,7 @@
 
         <!-- Scroll, text and floating svg for small screens -->
         <div class="scroll-and-text lg:w-2/3 mt-5 lg:mt-5 md:hidden justify-between items-center">
-          <p
-            class="hero-details-text font-sf text-xs sm:text-base text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
+          <p  class="hero-details-text font-sf text-xs sm:text-base text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
             I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
             user interfaces. I am passionate about solving complex problems through data-driven processes that
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
@@ -477,14 +475,13 @@
     <section class="featured-projects py-16 lg:py-20 font-normal" id="featured-projects">
       <p class="font-sf text-xs lg:text-sm lg:tracking-widest dark:text-white">FEATURED PROJECTS</p>
 
-      <p
-        class="projects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:tracking-tighter dark:text-dark">
+      <p class="projects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl md:tracking-tighter dark:text-dark">
         PROJECTS
       </p>
 
       <div class="scroll-and-projects flex justify-between mt-16 lg:pt-20 lg:pb-20">
         <div class="vertical-scroll relative h-40 md:h-56 w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
-          <div class="inner-vertical-scroll absolute bottom-0 h-20 md:h-28 w-px bg-black dark:bg-white"></div>
+          <div class="inner-vertical-scroll absolute top-0 h-20 md:h-28 w-px bg-black dark:bg-white"></div>
         </div>
 
         <div class="projects space-y-10 sm:space-y-14 w-3/4 lg:pl-28">
@@ -587,29 +584,29 @@
       <p class="contribution-header-text font-sf text-xs lg:text-sm lg:tracking-widest dark:text-white">CONTRIBUTIONS
       </p>
 
-      <p
-        class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:tracking-tighter text-light dark:text-dark">
+      <p class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl md:tracking-tighter text-light dark:text-dark">
         CONTRIBUTIONS
       </p>
 
-      <div
-        class="grid-div w-full mt-10 lg:mt-16 block space-y-7 md:space-y-0 md:grid grid-cols-3 md:gap-x-72 lg:gap-x-72 pr-7 sm:pr-14 md:pr-0">
-        <div class="presently">
-          <div class="presently-container md:w-60 lg:w-80 md:h-52 lg:h-72 p-7 lg:p-7">
+      <div class="grid-div overflow-x-hidden w-full flex-nowrap mt-10 lg:mt-16 space-y-7 md:space-y-0 md:flex justify-between md:space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0">
+        <div class="presently md:min-w-4 lg:min-w-min">
+          <div class="presently-container md:w-80 lg:w-84 lg:h-72 p-7 lg:p-7">
             <a href="#">
               <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
+                  fill="#2D2D2F" style="opacity: 0.5;" />
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M26.0208 22.2909C26.8837 22.2909 27.5833 21.5914 27.5833 20.7284L27.5832 1.97848C27.5832 1.11553 26.8837 0.415979 26.0207 0.415979L7.27076 0.415977C6.40781 0.415977 5.70825 1.11553 5.70825 1.97848C5.70825 2.84142 6.40781 3.54098 7.27075 3.54098L22.2485 3.54098L0.957567 24.8319C0.347372 25.4421 0.347372 26.4314 0.957567 27.0416C1.56776 27.6518 2.55708 27.6518 3.16728 27.0416L24.4582 5.75068L24.4583 20.7284C24.4583 21.5914 25.1578 22.2909 26.0208 22.2909Z"
                   fill="#2D2D2F" />
               </svg>
             </a>
 
-            <p
-              class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+            <p class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
               Presently
             </p>
 
-            <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 leading-5">
+            <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
@@ -627,10 +624,13 @@
           </div>
         </div>
 
-        <div class="presently">
-          <div class="presently-container lg:w-80 lg:h-72 p-7 lg:p-7">
+        <div class="memoji md:min-w-4 lg:min-w-min">
+          <div class="memoji-container md:w-80 lg:w-84 lg:h-72 p-7 lg:p-7">
             <a href="#">
               <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
+                  fill="#2D2D2F" style="opacity: 0.5;" />
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M26.0208 22.2909C26.8837 22.2909 27.5833 21.5914 27.5833 20.7284L27.5832 1.97848C27.5832 1.11553 26.8837 0.415979 26.0207 0.415979L7.27076 0.415977C6.40781 0.415977 5.70825 1.11553 5.70825 1.97848C5.70825 2.84142 6.40781 3.54098 7.27075 3.54098L22.2485 3.54098L0.957567 24.8319C0.347372 25.4421 0.347372 26.4314 0.957567 27.0416C1.56776 27.6518 2.55708 27.6518 3.16728 27.0416L24.4582 5.75068L24.4583 20.7284C24.4583 21.5914 25.1578 22.2909 26.0208 22.2909Z"
                   fill="#2D2D2F" />
@@ -638,11 +638,11 @@
             </a>
 
             <p
-              class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
-              Presently
+              class="memoji-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+              Memoji
             </p>
 
-            <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 leading-5">
+            <p class="memoji-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
@@ -660,22 +660,24 @@
           </div>
         </div>
 
-        <div class="presently">
-          <div class="presently-container lg:w-80 lg:h-72 p-7 lg:p-7">
+        <div class="desktop-mockup md:min-w-4 lg:min-w-min">
+          <div class="desktop-mockup-container md:w-80 lg:w-84 lg:h-72 p-7 lg:p-7">
             <a href="#">
               <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
+                  fill="#2D2D2F" style="opacity: 0.5;" />
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M26.0208 22.2909C26.8837 22.2909 27.5833 21.5914 27.5833 20.7284L27.5832 1.97848C27.5832 1.11553 26.8837 0.415979 26.0207 0.415979L7.27076 0.415977C6.40781 0.415977 5.70825 1.11553 5.70825 1.97848C5.70825 2.84142 6.40781 3.54098 7.27075 3.54098L22.2485 3.54098L0.957567 24.8319C0.347372 25.4421 0.347372 26.4314 0.957567 27.0416C1.56776 27.6518 2.55708 27.6518 3.16728 27.0416L24.4582 5.75068L24.4583 20.7284C24.4583 21.5914 25.1578 22.2909 26.0208 22.2909Z"
                   fill="#2D2D2F" />
               </svg>
             </a>
 
-            <p
-              class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
-              Presently
+            <p class="desktop-mockup-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+              Desktop Mockup
             </p>
 
-            <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 leading-5">
+            <p class="desktop-mockup-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
@@ -692,7 +694,6 @@
             </p>
           </div>
         </div>
-
       </div>
     </div>
   </section>
@@ -702,28 +703,28 @@
 
       <p class="uppercase font-sf text-xs lg:text-xs lg:tracking-wider lg:mb-7 dark:text-white">more on youtube...</p>
 
-      <div class="div overflow-hidden relative lg:h-48 flex justify-between lg:items-center mt-5">
+      <div class="div overflow-hidden relative lg:h-48 flex justify-between md:items-center mt-5">
         <!-- Blocks for big screens -->
-        <div class="blocks flex items-center lg:-ml-10">
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:w-16 lg:h-32 lg:mt-10"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:w-16 lg:h-80 lg:mt-0 lg:ml-20 lg:mr-6"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:w-16 lg:h-32 lg:mt-32"></div>
+        <div class="blocks hidden md:flex items-center md:-ml-10">
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 md:h-32 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-10"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 md:h-80 md:-mb-40 md:-mt-28 lg:mb-0 lg:mt-0 md:ml-16 md:mr-8 lg:ml-20 lg:mr-6"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 md:h-32 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-32"></div>
         </div>
 
-        <div class="texts py-5 sm:py-7 lg:py-3 px-5 sm:px-7 lg:px-10 z-50">
-          <p class="name capitalize font-caudex font-semibold text-base sm:text-lg lg:text-3xl dark:text-white">
+        <div class="texts py-5 sm:py-7 lg:py-3 px-5 sm:px-7 lg:px-0 md:w-1/2 md:mr-5 lg:mr-10 z-50">
+          <p class="name capitalize font-caudex font-semibold text-base sm:text-lg md:text-2xl lg:text-3xl dark:text-white">
             ozenua oluwatobi john
           </p>
 
           <p class="details font-sf text-primary py-2 lg:py-2 text-xs lg:text-sm leading-5 lg:leading-6">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor
-            sint. Velit officia consequat duis enimv velit mollit.
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor sint. Velit officia consequat duis enim velit mollit.
           </p>
 
           <p class="subscribe text-xs lg:text-sm"><a href="#">Subscribe</a></p>
         </div>
 
-        <div class="z-10">
+        <!-- Blocks for small screens -->
+        <div class="md:hidden z-10">
           <div
             class="rotated-block animate-pulse bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 right-20">
           </div>
@@ -737,18 +738,20 @@
 
   <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
     <div class="container mx-auto px-4 sm:px-8">
-      <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
-        <div class="texts-container flex lg:block items-baseline space-x-2 sm:space-x-7 lg:space-y-5">
+      <div class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
+        <div class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5">
           <p class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl">
             Got an idea?
           </p>
 
-          <p class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl">
-            Let's talk about it.
+          <p>
+            <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl" href="#">
+              Let's talk about it.
+            </a>
           </p>
         </div>
 
-        <div class="contacts font-sf lg:w-2/4 text-black dark:text-white text-xs">
+        <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs">
           <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
             <a class="instagram-footer-link" href="#">Instagram</a>
             <a class="youtube-footer-link" href="#">Youtube</a>
