--- a/src/index.html
+++ b/src/index.html
@@ -550,7 +550,7 @@
         </div>
       </div>
 
-      <div class="community-quote flex justify-between mt-20 md:mt-24 xl:mt-28 md:px-20 lg:px-32 xl:px-36">
+      <div class="community-quote flex justify-between mt-20 md:mt-24 xl:mt-32 md:px-20 lg:px-32 xl:px-20">
         <svg class="w-8 md:w-9 lg:w-10 xl:w-16 mb-5 md:mb-7 lg:mb-10" viewBox="0 0 69 49" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
@@ -559,10 +559,11 @@
         </svg>
 
         <div class="text-center space-y-2 xl:space-y-5 w-4/5 px-5">
-          <p class="top uppercase text-tiny md:text-xs xl:text-base tracking-widest dark:text-white">online design community builder
+          <p class="top uppercase text-tiny md:text-xs xl:text-lg tracking-widest dark:text-white">
+            online design community builder
           </p>
 
-          <p class="bottom text-sm sm:text-base md:text-lg xl:text-2xl text-primary lg:leading-7 xl:leading-8 lg:pt-3 xl:px-8">
+          <p class="bottom text-sm sm:text-base md:text-lg xl:text-lg3xl text-primary lg:leading-7 xl:leading-10 lg:pt-3">
             I have also contributed immensely to the online design
             community with asset files, online videos and articles.
           </p>
@@ -578,20 +579,21 @@
     </section>
   </div>
 
-  <section class="contributions py-16 lg:py-20 pl-7 sm:pl-14" id="contributions">
-    <div class="container mx-auto overflow-x-hidden">
-      <p class="contribution-header-text font-sf text-xs lg:text-sm lg:tracking-widest dark:text-white">CONTRIBUTIONS
+  <section class="contributions py-16 lg:py-20 xl:py-28" id="contributions">
+    <div class="container mx-auto overflow-x-hidden pl-7 sm:pl-14 md:pl-16 lg:pl-24 xl:pl-28 2xl:pl-32">
+      <p class="contribution-header-text font-sf text-xs lg:text-sm xl:text-base lg:tracking-widest dark:text-white">
+        CONTRIBUTIONS
       </p>
 
-      <p class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl md:tracking-tighter text-light dark:text-dark">
+      <p class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl md:tracking-tighter sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 text-light dark:text-dark">
         CONTRIBUTIONS
       </p>
 
       <div class="grid-div overflow-x-hidden w-full flex-nowrap mt-10 lg:mt-16 space-y-7 md:space-y-0 md:flex justify-between md:space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0">
-        <div class="presently md:min-w-4 lg:min-w-min">
-          <div class="presently-container md:w-80 lg:w-84 lg:h-72 p-7 lg:p-7">
+        <div class="presently md:min-w-4 lg:min-w-min xl:max-w-4">
+          <div class="presently-container md:w-80 lg:w-84 xl:w-96 p-7 lg:p-7 xl:p-10">
             <a href="#">
-              <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
                   fill="#2D2D2F" style="opacity: 0.5;" />
@@ -601,16 +603,16 @@
               </svg>
             </a>
 
-            <p class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+            <p class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl mt-5 lg:mt-10 dark:text-white">
               Presently
             </p>
 
-            <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
+            <p class="presently-details-text font-sf text-primary text-xs xl:text-sm mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
 
-            <p class="open-in-figma-link text-xs lg:text-sm mt-3 lg:mt-5 flex items-center space-x-2">
+            <p class="open-in-figma-link text-xs xl:text-sm mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
               <a href="#" class="open-in-figma-text font-sf text-primary">Open in Figma</a>
               <a href="#" class="">
                 <svg class="w-2 lg:w-3" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -624,9 +626,9 @@
         </div>
 
         <div class="memoji md:min-w-4 lg:min-w-min">
-          <div class="memoji-container md:w-80 lg:w-84 lg:h-72 p-7 lg:p-7">
+          <div class="memoji-container md:w-80 lg:w-84 xl:w-96 lg:h-72 p-7 lg:p-7 xl:p-10">
             <a href="#">
-              <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
                   fill="#2D2D2F" style="opacity: 0.5;" />
@@ -636,17 +638,16 @@
               </svg>
             </a>
 
-            <p
-              class="memoji-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+            <p class="memoji-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl mt-5 lg:mt-10 dark:text-white">
               Memoji
             </p>
 
-            <p class="memoji-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
+            <p class="memoji-details-text font-sf text-primary text-xs xl:text-sm mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
 
-            <p class="open-in-figma-link text-xs lg:text-sm mt-3 lg:mt-5 flex items-center space-x-2">
+            <p class="open-in-figma-link text-xs xl:text-sm mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
               <a href="#" class="open-in-figma-text font-sf text-primary">Open in Figma</a>
               <a href="#" class="">
                 <svg class="w-2 lg:w-3" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -659,10 +660,10 @@
           </div>
         </div>
 
-        <div class="desktop-mockup md:min-w-4 lg:min-w-min">
-          <div class="desktop-mockup-container md:w-80 lg:w-84 lg:h-72 p-7 lg:p-7">
+        <div class="desktop-mockup md:min-w-4 lg:min-w-min lg:max-w-none">
+          <div class="desktop-mockup-container md:w-80 lg:w-84 xl:w-96 lg:h-72 p-7 lg:p-7 xl:p-10">
             <a href="#">
-              <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
                   fill="#2D2D2F" style="opacity: 0.5;" />
@@ -672,16 +673,16 @@
               </svg>
             </a>
 
-            <p class="desktop-mockup-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+            <p class="desktop-mockup-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl mt-5 lg:mt-10 dark:text-white">
               Desktop Mockup
             </p>
 
-            <p class="desktop-mockup-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
+            <p class="desktop-mockup-details-text font-sf text-primary text-xs xl:text-sm mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
 
-            <p class="open-in-figma-link text-xs lg:text-sm mt-3 lg:mt-5 flex items-center space-x-2">
+            <p class="open-in-figma-link text-xs xl:text-sm mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
               <a href="#" class="open-in-figma-text font-sf text-primary">Open in Figma</a>
               <a href="#" class="">
                 <svg class="w-2 lg:w-3" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -697,7 +698,7 @@
     </div>
   </section>
 
-  <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
+  <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
     <section class="more-on-youtube lg:w-full py-10 lg:py-20" id="more-on-youtube">
 
       <p class="uppercase font-sf text-xs lg:text-xs lg:tracking-wider lg:mb-7 dark:text-white">more on youtube...</p>
